set(ELAPSE_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(ELAPSE_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)

set(ELAPSE_COMMON_DBUS_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/dbus/include)
set(ELAPSE_COMMON_DBUS_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/dbus/include PARENT_SCOPE)

set(ELAPSE_DBUS_XML
    ${CMAKE_CURRENT_SOURCE_DIR}/dbus/xml/device.xml
    ${CMAKE_CURRENT_SOURCE_DIR}/dbus/xml/battery.xml
    ${CMAKE_CURRENT_SOURCE_DIR}/dbus/xml/eegadc.xml
    ${CMAKE_CURRENT_SOURCE_DIR}/dbus/xml/eegchannel.xml
    ${CMAKE_CURRENT_SOURCE_DIR}/dbus/xml/imu.xml
    PARENT_SCOPE
)

add_subdirectory(dbus)
